add custom ArrayList implementation, goal is for students to improve time and see time/space tradeoff