@@ -1,13 +1,11 @@
 package org.kurt.answers;
 
 import static org.kurt.teaches.search.binary.BinarySearch.binarySearch;
-import static org.kurt.teaches.sort.bubblesort.BubbleSort.bubbleSort;
 
-import java.util.ArrayList;
 import java.util.logging.Logger;
+import org.kurt.teaches.nonGenericIntArrays.IntArray;
 import org.kurt.util.IntArrayFunction;
 import org.kurt.util.LoggerUtil;
-import org.kurt.util.Swapper;
 
 public class LIS {
   private static final Logger LOGGER = LoggerUtil.getLogger();
@@ -20,35 +18,33 @@ public class LIS {
     longestIncreasingSubsequence =
         seq -> {
           int length = seq.length;
-          int[] longestEndingAtN = new int[length];
+          IntArray longestEndingAtN = new IntArray(new int[length]);
           for (int i = 0; i < length; i++) {
-            longestEndingAtN[i] = 1; // minimally contains itself
+            longestEndingAtN.put(i, 1); // minimally contains itself
             for (int j = 0; j < i; j++) {
-              if (seq[j] < seq[i] && longestEndingAtN[i] < longestEndingAtN[j] + 1) {
-                longestEndingAtN[i] = longestEndingAtN[j] + 1;
+              if (seq[j] < seq[i] && longestEndingAtN.get(i) < longestEndingAtN.get(j) + 1) {
+                longestEndingAtN.put(i, longestEndingAtN.get(j) + 1);
               }
             }
           }
-          bubbleSort(longestEndingAtN, new Swapper());
-          return longestEndingAtN[length - 1];
+          return longestEndingAtN.max();
         };
 
     longestIncreasingSubsequenceQuick =
         seq -> {
           int length = seq.length;
-          ArrayList<Integer> answer = new ArrayList<>();
-          answer.add(seq[0]);
+          IntArray answer = new IntArray(new int[] {seq[0]});
           for (int i = 1; i < length; i++) {
             int curr = seq[i];
-            if (answer.getLast() < curr) {
-              answer.add(curr);
+            if (answer.get(answer.size() - 1) < curr) {
+              answer.append(curr);
             } else {
-              int index = binarySearch(answer, curr);
+              int index = binarySearch(answer.toArray(), curr);
               // if index is positive it's already in the list, except for corner case of 0
               if (index <= 0) {
                 index = index * -1;
                 if (answer.get(index) > curr) {
-                  answer.set(index, curr);
+                  answer.put(index, curr);
                 }
               }
             }
